# array-builder

./: CHANGELOG.md  array-builder.cabal
.github/workflows/: build.yaml
src-post-8.9/: Compat.hs
src-pre-8.9/: Compat.hs
src/Data/: Builder.hs
src/Data/Builder/: Catenable.hs  ST.hs
src/Data/Builder/Catenable/: Bytes.hs  Text.hs
test/: Main.hs
