cabal-version:       2.2
name: array-builder
version: 0.1.0.0
synopsis: Builders for arrays
homepage: https://github.com/andrewthad/array-builder
bug-reports: https://github.com/andrewthad/array-builder/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules: Data.Builder
  build-depends:
    , base >=4.12 && <5
    , primitive >=0.6.4 && <0.8
    , run-st >=0.1 && <0.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
