cabal-version:   2.2
name:            array-builder
version:         0.1.4.1
synopsis:        Builders for arrays
description:     Builders for arrays.
homepage:        https://github.com/byteverse/array-builder
bug-reports:     https://github.com/byteverse/array-builder/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2019 Andrew Martin
category:        Data
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules:
    Data.Builder
    Data.Builder.Catenable
    Data.Builder.Catenable.Bytes
    Data.Builder.Catenable.Text
    Data.Builder.ST

  other-modules:   Compat
  build-depends:
    , array-chunks        >=0.1    && <0.2
    , base                >=4.12   && <5
    , bytebuild           >=0.3.5  && <0.4
    , byteslice           >=0.2.7  && <0.3
    , bytestring          >=0.11.5 && <0.12
    , natural-arithmetic  >=0.1.3  && <0.3
    , primitive           >=0.6.4  && <0.10
    , text-short          >=0.1.3  && <0.2

  hs-source-dirs:  src

  if impl(ghc >=8.9)
    hs-source-dirs: src-post-8.9

  else
    hs-source-dirs: src-pre-8.9

  ghc-options:     -O2

test-suite test
  import:         build-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , array-builder
    , base
    , tasty
    , tasty-hunit

source-repository head
  type:     git
  location: git://github.com/byteverse/array-builder.git
